--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-This file was created by IntelliJ IDEA 10.5.2 for binding GitHub repository
+A Plugin Pack which contains a lot of plugin features of inactive plugin or features which where needed on our server but weren't available otherwise.
+
