--- a/README
+++ b/README
@@ -1,2 +1,14 @@
-A Plugin Pack which contains a lot of plugin features of inactive plugin or features which where needed on our server but weren't available otherwise.
+A Plugin Pack which contains a lot of plugin features of inactive plugin or features which where needed
+on our server but weren't available otherwise.
+
+Contains: 
+
+AfkBooter 1.03 http://forums.bukkit.org/threads/4614/
+BlocksOnGlas 0.44 http://forums.bukkit.org/threads/13193/
+HelloWorld 0.1.1 http://forums.bukkit.org/threads/13095/ 
+LampStones 1.0 http://forums.bukkit.org/threads/7030/
+
+and more to come..
+
+
 
