--- a/README
+++ b/README
@@ -7,6 +7,7 @@ AfkBooter 1.03 http://forums.bukkit.org/threads/4614/
 BlocksOnGlas 0.44 http://forums.bukkit.org/threads/13193/
 HelloWorld 0.1.1 http://forums.bukkit.org/threads/13095/ 
 LampStones 1.0 http://forums.bukkit.org/threads/7030/
+WurkIt 1.2.0 http://forums.bukkit.org/threads/20984/
 
 and more to come..
 
