--- a/README
+++ b/README
@@ -8,6 +8,7 @@ BlocksOnGlas 0.44 http://forums.bukkit.org/threads/13193/
 HelloWorld 0.1.1 http://forums.bukkit.org/threads/13095/ 
 LampStones 1.0 http://forums.bukkit.org/threads/7030/
 WurkIt 1.2.0 http://forums.bukkit.org/threads/20984/
+KitPlugin 1.2 http://forums.bukkit.org/threads/38557/
 
 and more to come..
 
