cleaning up stuff, trying to figure out dynamic command registration..

--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Contains:
 
 AfkBooter 1.03 http://forums.bukkit.org/threads/4614/
 HelloWorld 0.1.1 http://forums.bukkit.org/threads/13095/
-LampStones 1.0 http://forums.bukkit.org/threads/7030/
+LampStones 1.0 http://forums.bukkit.org/threads/7030/  (well let's see, there is LampStones http://forums.bukkit.org/threads/25393/)
 WurkIt 1.2.0 http://forums.bukkit.org/threads/20984/
 KitPlugin 1.2 http://forums.bukkit.org/threads/38557/
 
