added AttackControl Module, v 0.6

--- a/README
+++ b/README
@@ -3,11 +3,12 @@ on our server but weren't available otherwise.
 
 Contains: 
 
-AfkBooter 1.03 http://forums.bukkit.org/threads/4614/
-HelloWorld 0.1.1 http://forums.bukkit.org/threads/13095/
-LampStones 1.0 http://forums.bukkit.org/threads/7030/  (well let's see, there is GlowStoneLaterns http://forums.bukkit.org/threads/25393/)
+AfkBooter 1.03 http://forums.bukkit.org/threads/4614/ (not included as taken over by MorganM
+HelloWorld 0.1.1 http://forums.bukkit.org/threads/13095/  (Function integrated in MessageChanger Lite)
+LampStones 1.0 http://forums.bukkit.org/threads/7030/  (go for there is GlowStoneLaterns http://forums.bukkit.org/threads/25393/)
 WurkIt 1.2.0 http://forums.bukkit.org/threads/20984/
 KitPlugin 1.2 http://forums.bukkit.org/threads/38557/
+
 
 and more to come..
 
